# polars-to-ibis

./: .coveragerc  .gitignore  .pytest.ini  README-PYPI.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_misc.py
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md
.github/workflows/: test.yml
polars_to_ibis/: __init__.py
scripts/: changelog.py  requirements.py
tests/: test_misc.py  test_polars_to_ibis.py
