[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "polars_to_ibis"
authors = [{name = "The OpenDP Project", email = "info@opendp.org"}]
readme = "README-PYPI.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description"]
dependencies = [
    "duckdb==1.3.1",
    "ibis-framework[duckdb,polars]==10.8.0",
    "polars",
]

[project.urls]
Home = "https://github.com/opendp/polars-to-ibis"

[options]
python_requires = ">=3.10"

[project.optional-dependencies]
app = [
    "atpublic==6.0.2",
    "duckdb==1.3.1",
    "ibis-framework[duckdb,polars]==10.8.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.3.3",
    "parsy==2.2",
    "polars-runtime-32==1.34.0",
    "polars==1.34.0",
    "pyarrow-hotfix==0.7",
    "pyarrow==21.0.0",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "rich==14.2.0",
    "six==1.17.0",
    "sqlglot==27.25.2",
    "toolz==1.0.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
]

[tool.pyright]
include = ["dp_wizard"]

[tool.isort]
profile = "black"
