[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "polars_to_ibis"
authors = [{name = "The OpenDP Project", email = "info@opendp.org"}]
readme = "README-PYPI.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description"]
dependencies = [
    "duckdb==1.3.1",
    "ibis-framework[duckdb,polars]==10.8.0",
    "polars",
]

[project.urls]
Home = "https://github.com/opendp/polars-to-ibis"

[options]
python_requires = ">=3.10"

[tool.pyright]
include = ["polars_to_ibis"]

[tool.isort]
profile = "black"
